tests/unit/compile/cases/syntax-errors/02.text-gt.t
foo > bar
---- THROW% ----
Expected <EOF> but got ">" near `> bar` in `%s` at line 1
